test/files/pos/t0971.java
class A {
    int y = 1, z;
    static Object x = new java.util.HashMap<Object , Object > () ;
}
