test/files/neg/abstract-class-error/J.java
public abstract class J {
  public abstract int f();
  public abstract int g(int y, java.util.List z);
}